--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "homepage": "http://westshae.github.io",
-  "name": "comaltoya",
-  "version": "0.1.0",
+  "name": "westshae.com",
+  "version": "1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
