--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
