Changed colour scheme and backing image

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://westshae.github.io",
+  "homepage": "http://westshae.com",
   "name": "westshae.com",
   "version": "1.0",
   "private": true,
