Fixed background image not going to floor, fixed via footer *invisible*

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://westshae.com",
+  "homepage": "http://westshae.github.io",
   "name": "westshae.com",
   "version": "1.0",
   "private": true,
